<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_weight="1"
        android:contentDescription="@string/abacus"
        app:srcCompat="@drawable/de1077d3_fc37_476c_800b_0c05ea8efb5a_200x200__1_" />

    <EditText
        android:id="@+id/etFirstNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/etSecondNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:id="@+id/ans"
        android:layout_width="208dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/answer"
        android:text="@string/answer"
        android:textStyle="bold" />

    <Button
        android:id="@+id/add"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#177123"
        android:hapticFeedbackEnabled="true"
        android:text="@string/plus"
        android:textColor="#FDFBFB"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#C8AB3F"
        android:hapticFeedbackEnabled="true"
        android:text="@string/subtract"
        android:textColor="#FDFBFB"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#177123"
        android:hapticFeedbackEnabled="true"
        android:text="@string/multiply"
        android:textColor="#FDFBFB"
        android:textSize="15sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/divide"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#C8AB3F"
        android:hapticFeedbackEnabled="true"
        android:text="@string/divide"
        android:textColor="#FDFBFB"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/by_aishwarya" />

</LinearLayout>